--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 
 
     <!-- Added a link to Bootstrap-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"> 
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">  -->
 
     
 
 </head>
-<body class="body">
+<body>
     <h1> The Psychic Game</h1>
 
-    <div id="wins">Wins:</div>
-    <div id="loses">Loses:</div>
+    <div id="wins">Wins: </div>
+    <div id="loses">Loses: </div>
     <div id="guessLeft">Guesses Left:</div>
     <div id="guessSoFar">Your Guesses So Far:</div>
 
