modified files upload 820PM 10_20_18. Still issues with the the for loop not breaking.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
 
 </head>
 <body>
-    <h1> The Psychic Game</h1>
+    <h1 class="h1"> The Psychic Game</h1>
 
+    <br>
+    <br>
+    <br>
+    
     <div id="wins">Wins: </div>
     <div id="loses">Loses: </div>
     <div id="guessLeft">Guesses Left:</div>
